--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.0
 certifi==2024.12.14
+chroma-hnswlib==0.7.6
+chromadb>=0.4.18,<0.5.0 
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
