--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
 crewai==0.1.42
 streamlit==1.41.1
+langchain==0.0.212
+groq==1.0.1
+google-api-python-client==2.98.0
+gemini-api==0.1.0
